update link to EOR

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" type="image/png" />
-    <title>Prep Pal - Disaster Readiness App</title>
+    <title>PrepPal</title>
     <meta name="description" content="Check your disaster readiness with location-based insights and emergency supply assessments" />
-    <meta name="author" content="Emergency Prep Team" />
+    <meta name="author" content="Rushil Karani, Ali Zain, Dharav Shah, Mahad Hassan" />
 
     <meta property="og:title" content="Emergency Prep - Disaster Readiness App" />
     <meta property="og:description" content="Check your disaster readiness with location-based insights and emergency supply assessments" />
